# OPENMPINGINE

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: openmpingine.cpp
